Refactored to support Java11 and higher